# codesnippet

./: .gitignore  README.md
agent_harmess/: .gitignore  CMakeLists.txt  mainwindow.h
agent_harness/: CMakeLists.txt  mainwindow.cpp
build_llm/: README.md  requirements.txt
build_llm/ch01/: embedding.py  tokenization.py
build_llm/ch02/: self_attention_score.py  simple_self_attention.py
build_llm/ch03/: gpt_model_network.py  gpt_model_pretrain.py  gpt_model_pretrained_weight.py  qwen_model_pretained_weight.py
build_llm/ch04/: sms_classification.py  sms_classification_qwen.py  sms_classification_qwen_lora.py  sms_classification_qwen_lora_infer.py  sms_classification_qwen_lora_infer_output.txt  sms_classification_qwen_lora_output.txt  sms_classification_qwen_output.txt
build_llm/style_midi/: README.md
build_llm/style_midi/api/: server.py
build_llm/style_midi/requirement/: requirement.md
build_llm/style_midi/result/: model_url.txt
build_llm/style_midi/scripts/: analyze_conditions.py  extract_features.py  prepare_data.py
build_llm/style_midi/src/: dataset.py  generate.py  model.py  tokenizer.py  train.py
logs/stylemidi_1772258135/: events.out.tfevents.1772258135.beam-Latitude-7400.444435.0
logs/stylemidi_1772263888/: events.out.tfevents.1772263888.beam-Latitude-7400.16338.0
logs/stylemidi_1772264555/: events.out.tfevents.1772264555.beam-Latitude-7400.34630.0
logs/stylemidi_1772264723/: events.out.tfevents.1772264723.beam-Latitude-7400.36692.0
logs/stylemidi_1772266568/: events.out.tfevents.1772266568.beam-Latitude-7400.57712.0
(+23 files in other folders)
